--- a/estilo.css
+++ b/estilo.css
@@ -12,7 +12,7 @@ div.nav-wrapper{
 div#texto{
 	color:black;
 	background-color:white;
-	margin-top:30vh;
+	margin-top:45vh;
 	padding-top:5vh;
 	padding-bottom:5vh;
 }
@@ -22,5 +22,22 @@ p {
 }
 
 footer{
-	
+	margin-top:45vh;
+	padding-top:0px !important;
+}
+
+img.redes{
+	width:6vw;
+	height:6vh;
+}
+
+img.map{
+	width:6vw;
+	height:6vh;
+}
+
+ul#rodape li{
+	display:inline-block;
+	margin-left:-20px;
+	margin-right:-20px;
 }
