--- a/estilo.css
+++ b/estilo.css
@@ -26,6 +26,11 @@ p {
 	font-size: 16px;
 }
 
+p.links{
+	text-align:inherit;
+}
+
+
 footer{
 	margin-top:45vh;
 	padding-top:0px !important;
@@ -33,18 +38,10 @@ footer{
 }
 
 img.redes{
-	width:6vw;
 	height:6vh;
 }
 
 img.map{
-	width:6vw;
 	height:6vh;
 }
 
-ul#rodape li{
-	display:inline-block;
-	margin-left:-1vw;
-	margin-right:-1vw;
-
-}
